src/test/deca/syntax/invalid/resultats/test31_readInt-synt.res
./src/test/deca/syntax/invalid/test31_readInt.deca:17:11: missing ')' at ';'
